# UserlandVM-HIT

./: .genio  .gitignore  AddressSpace.h  AlmightyOpcodeHandler.cpp  AlmightyOpcodeHandler.h  AppServerBridge.cpp  AppServerBridge.h  ArchitectureFactory.cpp  ArchitectureFactory.h  ArchitectureFactoryImplementation.cpp  AutoDeleterOS.h  BUILD_AND_TEST.sh  BeAPIBridge.cpp  BeAPIBridge.h  BeAPIGUI.cpp  BeAPIGUIOffline.cpp  BeAPIWrapper.cpp  BeAPIWrapper.h  ByteOrder.h  COMPLEX_APPS_TEST_REPORT.md  CodeCleanup.h  CommonVMComponents.h  CommpageManager.cpp  CommpageManager.h  CompleteELFDynamicLinker.cpp  CompleteETDynRelocator.cpp  CompleteETDynRelocator.h  CompleteOpcodeHandler.cpp  CompleteOpcodeHandler.h  CompleteRelocations.h  CompleteSyscallDispatcher.cpp  CompleteSyscallDispatcher.h  CriticalFunctionalityFixes.h  DebugOutput.cpp  DebugOutput.h  DirectAddressSpace.cpp  DirectAddressSpace.h  DynamicLibraryResolver.h  DynamicLinker.cpp  DynamicLinker.h  (+397 more)
.cache/clangd/index/: AddressSpace.h.BB7A1637F958E113.idx  ArchitectureFactory.cpp.D64599EA3F5178F1.idx  ArchitectureFactory.h.C1F5B02F29FDE24E.idx  AutoDeleter.h.12D695A2F4282CEB.idx  AutoDeleterOS.h.0B3A69F2097D4499.idx  AutoDeleterOS.h.F14ED3FCAFACA7EE.idx  AutoDeleterPosix.h.2E6C3F4517A20991.idx  BeBuild.h.EBDA9ED109E4115E.idx  ByteOrder.h.75FB327BB2E1F470.idx  ByteOrder.h.BC5EB3FC5FAD1E6D.idx  CommpageManager.cpp.F643AD381EF95EE6.idx  CommpageManager.h.60236686C8415BBD.idx  DebugOutput.cpp.B96FF7276482D4A9.idx  DebugOutput.h.7DF561912C7ED5E7.idx  DirectAddressSpace.cpp.B65441A8B73005EB.idx  DirectAddressSpace.h.0EB0CA2574381A81.idx  DiskDeviceDefs.h.033EF2434131CC30.idx  DynamicLinker.cpp.F84432126A0BE7CB.idx  DynamicLinker.h.9E4F0D2C1ECB10BC.idx  ELFImage.cpp.A39FD06F2CF8B17F.idx  ELFImage.h.4725F2CF6883F5FD.idx  ElfDynamic.h.482EC04F606A710F.idx  EnhancedDynamicSymbolResolution.h.76D66DF3337378BC.idx  Errors.h.C02E5740C6B18105.idx  ExecutionBootstrap.cpp.B5A856AC21BA27F3.idx  ExecutionBootstrap.h.27E50AEE2A35D60B.idx  ExecutionEngine.h.AAD92165747849C3.idx  FPUInstructionHandler.cpp.595004353E49179E.idx  FPUInstructionHandler.h.A6976A9A52EA4512.idx  FloatingPointUnit.cpp.B99B8AAF96346234.idx  FloatingPointUnit.h.511D4AD4E28A0509.idx  GuestContext.h.AB75DD56214ABCDA.idx  GuestElfLoader.cpp.387C82A4A058A0CE.idx  GuestElfLoader.h.D174849A46D6CA1A.idx  GuestMemoryAllocator.h.8DABFBB143E6FD9F.idx  Haiku32SyscallDispatcher.cpp.AB46FC2E58AFB0AD.idx  Haiku32SyscallDispatcher.cpp.E91E0F90C427D017.idx  Haiku32SyscallDispatcher.h.5C53E2A01FCE3574.idx  Haiku32SyscallDispatcher.h.881FA0FD327B0077.idx  HaikuAddressSpace.cpp.7D5F6B2763A0DD36.idx  (+194 more)
arch/: ArchitectureFactory.h  meson.build
arch/arm/: meson.build
arch/riscv/: meson.build
arch/x86_32/: meson.build
common/: SyscallIPC.h
compat/: CompatibilityLayer.h  HaikuCompat.h
compat/haiku/: HaikuStubs.h  SafeSyscallArguments.h  SafeSyscalls.h
core/: ExecutionEngineBase.h  GuestContextBase.h  SyscallDispatcherBase.h  meson.build
docs/: README.md
dynamic_loading/: CompleteRelocationProcessor.h  EnhancedDynamicLinker.h  ProgramHeaderParser.cpp  ProgramHeaderParser.h  SymbolResolver.cpp  SymbolResolver.h
haiku/headers/Haiku/: HaikuAPIVirtualizer.h  HaikuApplicationServer.h  HaikuOSIPCSystem.h  HaikuStorageKit.h  HaikuSyscallDispatcher.h  MediaKit.h
haiku/implementation/: HaikuMediaKit.cpp  HaikuNetworkKit.cpp  HaikuSupportKit.cpp
include/: HaikuLogging.h  PlatformTypes.h
interpreter/: OptimizedInterpreter.h  RecycledSyscalls.cpp  RecycledSyscalls.h
kits/: ModularInterfaceKit.h  ModularMediaKit.h  ModularNetworkKit.h
platform/haiku/: HaikuPlatform.h
platform/haiku/gui/: HaikuGUIBackend.h  HaikuGUIStub.cpp  HaikuGUIStub.h  HaikuGUISyscalls.cpp  HaikuGUISyscalls.h  HaikuNativeGUI.cpp  HaikuNativeGUI.h
platform/haiku/memory/: HaikuAddressSpace.h
platform/haiku/system/: Haiku32SyscallDispatcher.cpp  Haiku32SyscallDispatcher.h  HaikuDynamicLinker.h  HaikuKernelDirect.cpp  HaikuKernelDirect.h  HaikuOptimizer.h  HaikuRuntimeLoader.cpp  HaikuRuntimeLoader.h
private/system/: syscalls.h  user_runtime.h
reportes/: 2026-02-06_COMPREHENSIVE_HAIKU_API_STRATEGY.txt  2026-02-06_COMPREHENSIVE_PULL_TEST_REPORT.txt  2026-02-06_Comprehensive_Test_Results.txt  2026-02-06_FINAL_DETAILED_STATUS_REPORT.txt  2026-02-06_LATEST_PULL_AND_TEST_REPORT.txt  2026-02-06_NEW_SESSION_COMPREHENSIVE_TEST.txt  2026-02-06_POST_RELOCATION_PROCESSOR_TEST_REPORT.txt  2026-02-06_Second_Test_Run_Report.txt  2026-02-06_X86-32_Interpreter_Status_Report.txt  ARCHITECTURE_ANALYSIS_20260206.md  BUILD_AND_TEST_20260206_FINAL.md  CRITICAL_ANALYSIS_20260206.md  DYNAMIC_LINKING_IMPLEMENTATION_20260206.md  FINAL_STATUS_REPORT_20260206.md  FINAL_VALIDATION_20260206.md  INTEGRATION_COMPLETE_20260206.md  PHASE2_READINESS_FINAL_20260206.md  PT_INTERP_OPTIMIZATION_COMPLETE_20260206.md  PULL_TEST_REPORT_20260206_v2.md  SESSION3_INTEGRATION_ATTEMPT_20260206.md  SESSION_FINAL_REPORT_20260206.md  SESSION_SUMMARY_20260206.md  SYSROOT32_TESTING_REPORT.md  TEST_SESSION_20260206_002416.txt  TEST_SESSION_20260206_011635.txt  TEST_SESSION_20260206_FINAL.md  UserlandVM-30933-debug-05-02-2026-02-40-40.report  UserlandVM-30984-debug-05-02-2026-02-41-01.report  UserlandVM-31008-debug-05-02-2026-02-41-29.report
src/core/: InstructionCacheOptimization.cpp  InstructionCacheOptimization.h  OptimizedAlgorithms.h  PerformanceConfig.cpp  PerformanceConfig.h
src/haiku/: HaikuNativeBEBackend.cpp  HaikuNativeBEBackend.h  HaikuNativeGUIBackend.cpp  HaikuNativeGUIBackend.h  HaikuNativeView.cpp  HaikuWindowInitializer.cpp  HaikuWindowInitializer.h  HaikuWindowServer.cpp  HaikuWindowServer.h
src/memory/: EnhancedHeap.cpp  EnhancedHeap.h  OptimizedStringPool.cpp  OptimizedStringPool.h
subprojects/: zycore.wrap
tests/: BasicFunctionalityTest  BasicFunctionalityTest.cpp  IntegrationTest.cpp  test_arithmetic  test_arithmetic.c  test_arithmetic.s  test_etdyn  test_etdyn.s  test_write  test_write.c  test_write.s
